# bisemigroup

./: CHANGELOG.md  TODO.md  bisemigroup.cabal  flake.nix
src/Data/: Bimonoid.hs  Binoid.hs  Bisemigroup.hs  Dioid.hs  Nearsemiring.hs  Semiring.hs  United.hs
src/Data/Bimonoid/: Syntax.hs
src/Data/Bisemigroup/: Syntax.hs
